messing with routing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "no-balls-countdown",
-  "homepage": "https://github.com/ivan131013/cat-celebration",
+  "homepage": "https://ivan131013.github.io/cat-celebration/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
