--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "firebase": "^10.1.0",
     "framer-motion": "^10.15.0",
     "gh-pages": "^5.0.0",
     "lodash": "^4.17.21",
